fix(view): remove z-indexes

--- a/src/styles.css
+++ b/src/styles.css
@@ -113,7 +113,6 @@ body {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
   grid-auto-rows: repeat(11, 1fr);
-  z-index: 1000;
 }
 .battlefield {
   grid-row: 2 / 11;
@@ -123,7 +122,6 @@ body {
   width: fit-content;
   border: 0.00125rem solid rgb(160, 160, 255);
   background: white;
-  z-index: -1000
 }
 
 .row {
